--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
-  responsive_sizer: ^3.3.1
-  cached_network_image: ^3.4.1
+  http: ^1.1.0
+
+
 
 dev_dependencies:
   flutter_test:
